Updated EVAT team Contributions

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -201,22 +201,28 @@ Project EVCFLO provides aid to this cause through two key services: interactive 
 2. Narrow down to the key external factors which impact the usage and success of EVs and EVCSs
 3. Display newly discovered EVCS locations onto a visual map.
 4. Integrate new EVCS locations onto our Google API interactive map.
-5. Fully migrate and host the new React based EVCFLO website.
 
 #### Aims this Trimester
-Convert the old HTML/CSS website to new website that using React framework and aim to integrate an interactive map that covers all EVCS locations across the globe to the website. Research and implement an AI Prediction System that automatically and accurately recommends new EVCS locations for EVCS companies to utilize. Further, we aim to advance the project website by implementing design work completed by previous trimesters and add more contents to the website.
+The project's primary goals encompass creating a robust online presence for EVAT by establishing a LinkedIn page and producing compelling content related to EVCFLO and Evolean. In the realm of data science, the focus is on streamlining workflows across the team, expanding the EV Charging station Location database with new datasets, and generating comprehensive notebooks for data analysis and modelling. The team aims to develop interactive dashboards using Tableau and Power BI to track progress and company analytics, specifically monitoring the growth of charging station data over time. Additionally, the data science team will prepare trimester reports to identify potential project directions and explore collaboration opportunities with other departments. In parallel, the web development team will revamp the front-end design based on design team documents and Evolean app styling, enhancing the website's user interface. They will integrate newly discovered EVCS locations on a visual map and implement a heatmap to showcase activity hubs for electric car chargers. The addition of a chatbot and a login function with Firebase backend connectivity will further elevate the website's functionality, while ongoing improvement of clustering predictions will enhance overall performance. Through these endeavours, the project seeks to bolster EVAT's digital presence and advance data science and web development capabilities.
 
 #### Deliverables
-- Display newly discovered EVCS locations onto a visual map (Web-Development team).
-- Integrate new EVCS locations onto our Google API interactive map (Web-Development team).
-- Implement website designs on the EVCFLO website and increase the sites functionality (Web-Development team).
-- Fully convert the old HTML/CSS website using React framework (Web-Development team).
-- Add more website contents such as FAQ page and AI Model pages (Web-Development team).
-- Expand on our EV Charge Location database through the addition of new datasets. (Data Science Team)
-- Continue to improve the clustering predictions, these are working but can be improved (Data Science Team).
-- Create more EVCS related AI/ML models to facilitate EVCS development and promote EV adaptation (Data Science Team).
-- Conduct more EV/EVCS related research and data analysis on newfound datasets (Data Science Team).
-- Improve the current visualisations (Both teams).
+Data Science
+- Continue development of standardising workflows across all elements of the data science team. 
+- Expand on our EV Charging station Location database through the addition of new and updated datasets.  
+- Provide list of completed notebooks (link to webpage) for data analysis: transform, visualise, model, communicate. 
+- Develop dashboards (Tableau & Power BI) tracking progress and internal company analytics, i.e increase in charging station analytics from trimester to trimester. 
+- Produce a trimester report for identifying potential directions for projects within the data science team and where collaboration can be made with other chameleon teams.
+
+Web Dev 
+- Refresh the design of the front end based on documents by the design team, as well as the Evoleon app styling. 
+- Display newly discovered EVCS locations onto a visual map.  
+- Create a ‘heatmap’ showing activity hubs for electric car chargers 
+- Create a chatbot that will popup when using the website 
+- Create a login function with connectivity to the firebase backend that the Evoleon app uses. 
+- Create design mock-ups for the new pages that will be created 
+- Integrate new EVCS locations onto our Google API interactive map (Web-Development team).  
+- Continue to improve the clustering predictions, these are working but can be improved.  
+- Implement website designs on the EVCFLO website and increase the sites functionality.
 
 #### Completion Summary
 - Fully converted the old HTML/CSS website using React framework (Web-Development team).
@@ -232,20 +238,18 @@ Convert the old HTML/CSS website to new website that using React framework and a
 
 
 #### EVCFLO Project Members Contributions
+| **Name** | **Student_ID** | **UG/PG** | **J/S** | **Team** | **Lead** |**Achievements** |
+| :-- | :-- | :-: | :-: | :-: | :-: |
+| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Senior | Web Dev | Yes |  |
+| **Jamie Connor Davidson** | 222356461 | Postgrad | Senior | Data Science | Yes | I have so far managed the data science team, I organised tasks using Trello and setup our GitHub repository to help with onboarding for T2-2023. I created a roadmap divided into five bi-weekly sprints, Sprint 1, I creating a useful notebook for generating up-to-date station location datasets. In Sprint 2, I provided the team with an automated notebook that produced a reference HTML document for dataset summary information, enhancing the project's accessibility and documentation. Moving forward, I will be coordinating the team to help showcase our deliverables and provide impactful data-driven solutions onto the EVCFLO website. |
+| **Jennifer Yau** | 222087183 | Postgrad | Junior | Data Science | Yes | |
+| **Yuvraj Sekhon** | 222184401 | Undergrad | Junior | Data Science |  |  |
+| **Mark Justin Premier** | 222115089 | Postgrad | Senior | Web Dev | Yes |Helped create Trello board tasks and organise team meetings for team members. Created a roadmap document at the beginning of the trimester to ensure work stayed on track and cleaned the GitHub Repo before the trimester began to ensure no unused branches could cause confusion. Gained access to the Google Cloud Platform project, including increased permissions to allow an eventual CI/CD pipeline to be built. Technical contribution is the revamped news page, which displays the latest news articles in a grid, using the newsAPI to collect news stories from websites. Am currently implementing a continuous integration pipeline in the GCP. |
+| **Ishika Khanna** | 219551957 | Undergrad | Senior | Web Dev | Yes |  | 
+| **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Senior | Web Dev |  |  |
+| **Hoi Fung Dicky** | 222383729 | Postgrad | Junior | Web Dev |  | |
+| **Shuodong Xing** | 219368407 | Undergrad | Junior | Web Dev |  |  |
 
-| **Name** | **Student_ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
-| :-- | :-- | :-: | :-: | :-: | :-: | :--
-| **Mick Wiedermann** | 222058299 | Undergrad | Senior | Project | Yes | Within EVCFLO I organise and host the weekly meetings, record minutes, support and help organise the team. Created the current trello board (previous board was seperate to Chameleon), created Chameleon onboarding checklist and sprint planning documents. Note, I contribute to Evoleon App not technically.|  
-| **Scott Geoffrey West** | 213121254 | Postgrad | Junior | Data Science | Co.|I have assisted with creating the "Data Science - Getting Started & Upskilling folder", and pro-actively completed project management tasks using through Trello, organizing meetings and communicating in Microsoft Teams. I have also built & completed EDA & ML models on EV charging stations around the world. In doing so I created charts & reports (eg pie, bar & heat maps) to uncover insights & committed these to Github (please note this is still a work in progress).|
-| **Jamie Connor Davidson** | 222356461 | Postgrad | Junior | Data Science |  |On the Data Science Team, I have written and completed Trello card items, attended weekly team meeting to update my progress, created a file structure, naming convention, reference and workflow and readme files for the EVCFLO/datasets. I have been working on creating datasets and notebooks to improve the way we perform data analysis, and prepare data for modelling.|
-| **Siqin Chen** | 221115918 | Postgrad | Senior | Data Science |  |conducted extensive research on the topic of electric vehicle (EV) range, ensuring a thorough understanding of its definition and various types; gathered data on the EV range of popular models available in the market; utilized Python to create a script for cleaning the dataset and visualize it; compiled a comprehensive document to detail the dataset and analyze the results.|
-| **Viola Cherotich Meli** | 221187491 | Postgrad | Senior | Data Science |  |conducted research on EV, in melbourne, my user story was on determining the wait time per charging station, in the first sprint I have been able to use the already collected dataset since i found most of them that were collected last trimester more suitable for my case..I did alot of data cleaning and EDA using python and uploaded a comprehensive document on the same. In this second sprint am working on implementing machine learning models that would be used on predicting the wait time.|
-| **Ishika Khanna** | 219551957 | Undergrad | Junior | Web Dev | Yes |  |
-| **Arnold Prabudda Kalpesh Mendis** | 222330109 | Undergrad | Junior | Web Dev |  |As an active member of the web dev team, I have prepared several user stories such as a chatbot and a submission form that will help to achieve a better outcome through our EVCFLO website. Furthermore, I have fully developed a user submission form using React JS frontend technology, which helps us to insert records into our company database regarding the required EV charging stations in specific areas.|
-| **Mark Justin Premier** | 222115089 | Postgrad | Junior | Web Dev |  |Being a member of the frontend web dev team, I implemented the React framework to create a new and more functional frontend of the website, and migrated across most of the work from the previous website into the new website. I've also been helping other team members understand the React framework, so we all can contribute.|
-| **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Junior | Web Dev |  | I created a webpage containing details of the different electric chargers offered by the company, The different products are suitable for different users. I created the webpage using react and I uploaded the same to GITHUB.I am now creating webpages containing different products and their installation suitable for different areas like workplaces, retail markets etc.|
-| **Ezekiel Kevin Griffin** | 219272783 | Undergrad | Senior | Web Dev | |Created multiple report documents outlining and breaking down the purpose of previous trimesters work for teams understanding. Reacquired access to both GCP and MongoDB assets and begun documentation. As well as beginning new React/Flask integration on GCP.|
-| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Junior | Web Dev | Yes |As the Web Dev team lead, I have contributed in leadership and team meetings, assisted in forming user stories and functional and non-functional requirements, facilitated team communication and provided guidance to team members. I have built a README file for the project repository that summarizes all installation instructions, documentation, and project tech involved, and I am currently spearheading the web design components by creating Figma prototypes for the frontend.|
 
 
 ### <a name="evm"></a>Evoleon Mobile Application
@@ -254,22 +258,23 @@ Convert the old HTML/CSS website to new website that using React framework and a
 The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations. 
 
 #### Goals & Objectives
-The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket: 
-- Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).
-- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route. 
-- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle. 
+The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket:   
+
+- Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).  
+- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route.   
+- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle.  
 
 
 #### Aims this Trimester
-The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited. Furthermore, the team aims to implement policies for shared coding practices to provide future teams with detailed references.
+The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited.
 
 #### Deliverables
-- Work on adding real EV Location data into the new Firestore locations database.
-- Create a Navigation System for the applications map to travel to a selected EV Charger.
-- Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.
-- Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.
-- Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.
-- Add the process to reset a user’s password or delete an account.
+- Work on adding real EV Location data into the new Firestore locations database.  
+- Create a Navigation System for the applications map to travel to a selected EV Charger.  
+- Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.  
+- Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.  
+- Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.  
+- Add the process to reset a user’s password or delete an account.  
 - Continue adding user interface code for the applications pages.
 
 #### Current Progress
@@ -295,16 +300,17 @@ The team will continue to implement code for additional user interface pages alo
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
-| **Mick Wiedermann** | 222058299 | Undergrad | Senior | App Dev, Project | Yes |Updated the Evoleon GitHub repo merging and resolving resulting conflicts before cloning to Chameleon (was separate). Created the current trello board (previous board was seperate to Chameleon). Created sprint planning documents and held sprint planning meetings. Added new features to the Evoleon App including the new About screen. Revamped the Chameleon Documents repo with a detailed read me and linking directory. Created Chameleon wide GitHub best practice policy. Created other how to and best practice documents, organise and host weekly meetings, mentored and guided team members.|
-| **Joel Murphy-Dyer** | 221081809 | Undergrad | Junior | App Dev, Project | Yes | As a project lead for the application development team, I have implemented and coded a terms and conditions page to the app within the signup screen. Additionally, I have maintained regular contact with the team members on how they are progressing with their work.  |
-| **Jordan Sam Cooke** | 220208777 | Undergrad | Junior | App Dev |Co.|Added features which include password reset and data deletion of firebase data. Working on refactoring the repository with new guidelines documents that I'm the lead developer of; in order to facilitate handover of codebase to new Chameleon members.|
-| **Kanishk Rajvanshi** | 222486026 | Postgrad | Junior | App Dev |  |Being a member of the Chameleon Evoleon App Team I worked on refactoring the code to make code more efficient. Have also added relevant comments in the code for better readability. Apart from this have done refactoring of the code following the coding practice document prepared by my colleagues.|
-| **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Junior | App Dev |  |   |
-| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Junior | App Dev |  |I'm in charge of charging status part. To complete this mission, I start writing coding to carry out a future in order to show the current charging status. I've done some tests on coding and they are still getting some errors to exporting the best result. And i am attending meetings with my teammates and collaborating with them to find solutions and new ideas for our project.|
-| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Junior | App Dev |  |Redesigning the Map view and adding cross platform functionality to it. Adding security rules to the google firebase. General tidy up of the code base. Update conflicting dependancies. Help team members when I can.|
-| **Wei Liang Tiew** | 220427347 | Undergrad | Junior | App Dev, Design |  |Created a FAQ page for the website, still further work required. Participate in the weekly meetings contibuting to the general discussion and helping team members where I can. |
-| **Aanan Abdullah** | 220499062 | Undergrad | Junior | App Dev | Yes | As part of the application development team, I implemented the code for a update user details screen where users can change their personal details as necessary. Moreover, as the application development leader, I have been providing guidance to other team members to understand how to breakdown the user stories and assign any necessary tasks. |
+| **Jordan Sam Cooke** | 220208777 | Undergrad | Senior | App Dev, Project | Yes |I have organised the onboarding of students to the Evoleon sub-group, which includes running meetings, creating documents, and updating the repository. I have guided students through discussions and meetings to successfully develop new features and implement design elements outlined for the previous designs. Technically reviewed and started to implement a complete overhaul of the colour scheme to allow for the use of colour variables while also utilising either dark or light mode colour schemes depending on the user's preference to allow for greater customisability. I created plans to reevaluate the current documentation of the Evoleon repository to allow for quicker and more effective onboarding next trimester.|
+| **Joel Murphy-Dyer** | 221081809 | Undergrad | Senior | App Dev| Yes | As a project lead for the application development team, I have implemented and coded a terms and conditions page to the app within the signup screen. Additionally, I have maintained regular contact with the team members on how they are progressing with their work.  |
+| **Aanan Abdullah** | 220499062 | Undergrad | Senior | App Dev |Co.|I created 2 screens where the first one was a Help and Support page listing common EV FAQs and Answers and a Settings screen. Then I provided guidance to several Junior students along with updating the Evoleon Trello board with updated links and more onboarding cards. I also presented a company status update during the Week 4 scheduled lecture and will do so in Week 7 as well.I have facilitated and taken meeting minutes for the weekly team meetings several times.|
+| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Senior | App Dev |  |  |
+| **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Senior | App Dev |  |   |
+| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Senior | App Dev |  |I'm in charge of charging status part. To complete this mission, I start writing coding to carry out a future in order to show the current charging status. I've done some tests on coding and they are still getting some errors to exporting the best result. And i am attending meetings with my teammates and collaborating with them to find solutions and new ideas for our project.|
+| **Wei Liang Tiew** | 220427347 | Undergrad | Senior | App Dev, Design |  |Created a FAQ page for the website, still further work required. Participate in the weekly meetings contibuting to the general discussion and helping team members where I can. |
+| **Daniel D'Amore** | 221240956 | Undergrad | Junior | App Dev |  |  |
 | **Asher Lam** | 221254112 | Undergrad | Junior | Web Dev |  |I am under the app development team, my contribution so far has been researching methods on implement my design on availability on charging station and beginning design elements in figma prototypes|
+|**Ambre Sarrazin**| 220321559| Undergrad | Junior| Security| | |
+|**Shuodong Xing**| 219368407 | Undergrad| Junior| App Dev| | Created more user options, updated reset password function, and implemented function to send users reset password emails. |
 
 
 
