Updated colour scheme to match EVAT

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -248,32 +248,34 @@ Convert the old HTML/CSS website to new website that using React framework and a
 | **Yesini Charithma Liyanage** | 222063923 | Undergrad | Junior | Web Dev | Yes |As the Web Dev team lead, I have contributed in leadership and team meetings, assisted in forming user stories and functional and non-functional requirements, facilitated team communication and provided guidance to team members. I have built a README file for the project repository that summarizes all installation instructions, documentation, and project tech involved, and I am currently spearheading the web design components by creating Figma prototypes for the frontend.|
 
 
-### <a name="evm"></a>Evoleon Mobile Application
-
-#### Overview
+<br> <a name="App dev"></a><h2 style="color:#4CB166">Evoleon</h2>
+<h4 style="color:#00A688">Overview</h4>
 The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations.
 
-#### Goals & Objectives
-The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket:   
+<h4 style="color:#00A688">Goals & Objectives</h4>
+The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket:
 
 - Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).  
-- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route.   
-- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle.   
+- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route.
+- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle.
 
 
-#### Aims this Trimester
-The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited. 
+<h4 style="color:#00A688">Aims this Trimester</h4>
 
-#### Deliverables
+The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited.
+
+<h4 style="color:#00A688">Deliverables</h4>
+
 - Work on adding real EV Location data into the new Firestore locations database.  
 - Create a Navigation System for the applications map to travel to a selected EV Charger.  
 - Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.  
 - Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.  
 - Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.  
 - Add the process to reset a user’s password or delete an account.  
-- Continue adding user interface code for the applications pages. 
+- Continue adding user interface code for the applications pages.
 
-#### Current Progress
+<h4 style="color:#00A688">Current Progress</h4>
+
 The team has created many user stories, and team members have divided the user stories into individual tasks. Most of the team focuses on the application development while a small portion focuses on enhancing the current design plans to align them more with the branding guidelines. The list below outlines the team's main achievements so far:
 
 - Completed security review of the Firestore database to ensure user details are not compromised.
@@ -285,12 +287,13 @@ The team has created many user stories, and team members have divided the user s
 - Updated the error messages produced by Firebase to give users more constructive messages.
 - Implemented the bottom navigation outlined in the high-fidelity design. Added comments for greater readability.
 
-#### Next Steps
+<h4 style="color:#00A688">Next Steps</h4>
+
 The team is making steps towards implementing the code and design outlined in our high-fidelity designs. This will allow the app to be closer aligned to the EVAT project design and colour schemes outlined. The leadership team will review the documentation and update areas for a smooth and efficient handover.
 
 <br>
 
-#### Evoleon App Project Members
+<h4 style="color:#00A688">Evoleon App Project Members</h4>
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
