Updated student list for 6.1P

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -247,7 +247,6 @@ Convert the old HTML/CSS website to new website that using React framework and a
 | **Ezekiel Kevin Griffin** | 219272783 | Undergrad | Senior | Web Dev | |Created multiple report documents outlining and breaking down the purpose of previous trimesters work for teams understanding. Reacquired access to both GCP and MongoDB assets and begun documentation. As well as beginning new React/Flask integration on GCP.|
 | **Yesini Charithma Liyanage** | 222063923 | Undergrad | Junior | Web Dev | Yes |As the Web Dev team lead, I have contributed in leadership and team meetings, assisted in forming user stories and functional and non-functional requirements, facilitated team communication and provided guidance to team members. I have built a README file for the project repository that summarizes all installation instructions, documentation, and project tech involved, and I am currently spearheading the web design components by creating Figma prototypes for the frontend.|
 
-
 <br> <a name="App dev"></a><h2 style="color:#4CB166">Evoleon</h2>
 <h4 style="color:#00A688">Overview</h4>
 The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations.
@@ -298,14 +297,15 @@ The team is making steps towards implementing the code and design outlined in ou
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
 | **Jordan Sam Cooke** | 220208777 | Undergrad | Senior | App Dev |Project|I have organised the onboarding of students to the Evoleon sub-group, which includes running meetings, creating documents, and updating the repository. I have guided students through discussions and meetings to successfully develop new features and implement design elements outlined for the previous designs. Technically reviewed and started to implement a complete overhaul of the colour scheme to allow for the use of colour variables while also utilising either dark or light mode colour schemes depending on the user's preference to allow for greater customisability. I created plans to reevaluate the current documentation of the Evoleon repository to allow for quicker and more effective onboarding next trimester.|
-| **Joel Murphy-Dyer** | 221081809 | Undergrad | Junior | App Dev, Project | Yes | As a project lead for the application development team, I have implemented and coded a terms and conditions page to the app within the signup screen. Additionally, I have maintained regular contact with the team members on how they are progressing with their work.  |
-| **Kanishk Rajvanshi** | 222486026 | Postgrad | Junior | App Dev |  |Being a member of the Chameleon Evoleon App Team I worked on refactoring the code to make code more efficient. Have also added relevant comments in the code for better readability. Apart from this have done refactoring of the code following the coding practice document prepared by my colleagues.|
-| **Khanh Nguyen Nguyen** | 221393506 | Undergrad | Junior | App Dev |  |   |
-| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Junior | App Dev |  |I'm in charge of charging status part. To complete this mission, I start writing coding to carry out a future in order to show the current charging status. I've done some tests on coding and they are still getting some errors to exporting the best result. And i am attending meetings with my teammates and collaborating with them to find solutions and new ideas for our project.|
-| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Junior | App Dev |  |Redesigning the Map view and adding cross platform functionality to it. Adding security rules to the google firebase. General tidy up of the code base. Update conflicting dependancies. Help team members when I can.|
-| **Wei Liang Tiew** | 220427347 | Undergrad | Junior | App Dev, Design |  |Created a FAQ page for the website, still further work required. Participate in the weekly meetings contibuting to the general discussion and helping team members where I can. |
-| **Aanan Abdullah** | 220499062 | Undergrad | Junior | App Dev | Yes | As part of the application development team, I implemented the code for a update user details screen where users can change their personal details as necessary. Moreover, as the application development leader, I have been providing guidance to other team members to understand how to breakdown the user stories and assign any necessary tasks. |
-| **Asher Lam** | 221254112 | Undergrad | Junior | Web Dev |  |I am under the app development team, my contribution so far has been researching methods on implement my design on availability on charging station and beginning design elements in figma prototypes|
+| **Aanan Abdullah** | 220499062 | Undergrad | Senior | App Dev | Yes | |
+| **Joel Murphy-Dyer** | 221081809 | Undergrad | Senior | App Dev | Co. | |
+| **Rodney Tenzin Tsewang Annand** | 221156479 | Undergrad | Senior | App Dev |  | |
+| **Wei Liang Tiew** | 220427347 | Undergrad | Senior | App Dev, Design |  | |
+| **Asher Lam** | 221254112 | Undergrad | Senior | Web Dev |  | |
+| **Mohammed Khalid M J Al-Malki** | 220499349 | Undergrad | Senior | App Dev |  | |
+| **Daniel D'Amore** | 221240956 | Undergrad | Junior | App Dev |  | |
+| **Ambre Sarrazin** | 220321559 | Undergrad | Junior | Security |  | |
+| **Shuodong Xing** | 219368407 | Undergrad | Junior | App Dev |  | |
 
 
 
