Update 6.1P Chameleon T2_2023.md
Updated 6.1P with Izaz's achievements and made an area for Maraim Kassar to add the achievements of MOP

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -361,10 +361,7 @@ The list below outlines the team's main achievements so far:
 - Completed repointing some of the published use case APIs.
 - Completed defining a series of use cases to be explored by the DS team.
 - Presented new use case ideas to the client at the City Of Melbourne.
-- The source code has been inspected for vulnerabilities.
-- Ports for the website have been scanned (5 open ports).
-- The website has been stress tested for high amounts of traffic in small periods of time.
-- Traversal attacks have been tested and do fail against the website.
+**MOP ACHIEVEMENTS TO BE LISTED HERE**
 
 
 #### Next Steps
@@ -399,7 +396,7 @@ The web development team will...
 | **Ramandeep Singh** | 222196318 | Undergrad | Junior | Dev Team |  |  |
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  |  |
 | **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  |  |
-| **Izaz Ishaque** | 221005704 | Postgrad | Senior | Cyber Security | Yes |  |
+| **Izaz Ishaque** | 221005704 | Undergrad | Senior | Cyber Security | Yes | Migrated students to their preferred teams, Conducted a security audit of MOP (Consisting of a vulnerability assessment, Encryption testing, Error Handling, Security Headers and method validation) with vulnerabilities found alongside suggestions to fix them, Created a tutorial for the juniors on using GitHub, Created a backup/Disaster recovery plan for all of Chameleon and submitted to Jesse for review. Currently Auditing the Chameleon Website with Zac Kein and currently stress testing the current Chameleon website to test the maximum capacity of users that the website can take. |
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes |  |
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
 | **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
