Pasted Nathan's and Keefe contributions

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -381,8 +381,8 @@ The web development team will...
 | **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes | |
 | **Yash Krupanand Daware** | 222482648 | Postgrad | Junior | Data Science | Yes | |
 | **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes | |
-| **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes | |
-| **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  |  |
+| **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes | I am one of the leaders of the data science and engineering team. This trimester, I am working with Nathan to develop a use case called Urban Art Explorer, we are using 3 datasets from the City of Melbourne Open Data. At the start of the trimester, I created a Trello card for Nathan and I. I added a checklist to keep us on track and to mark our progress. I was the host of the weekly team meeting in week 6. I went through how to set up an introduction to the use case and I am doing a proper tutorial on the process of formatting an introduction for use cases. During the break, I finished the rough cut for the introduction of the use case and figured out how to filter out duplicate data.|
+| **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  |  I developed a new use case and set up three new APIs. I filtered the APIs to receive only the necessary data and combined them into one dataframe. After removing duplicates, I implemented code to find the closest piece of art to the user's location. I also added links for users to view the art. Using the Google API, I converted coordinates into addresses. The distance to each piece of art is also displayed. Furthermore, I integrated a map, expanded on the use case, and created another version to locate the nearest bar.|
 | **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  |  |
 | **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  |  |
 | **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  |  |
