Update 6.1P Chameleon T2_2023.md

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -147,7 +147,7 @@ Evoleon Mobile Application (_sub project 2_)
 
 - Data Science Leads:Shanuk Julian Devamulla,Keefe Euler Alpay, Vaibhav Kashyap, SimranJit Singh, Yash Krupanand Daware 
 - Web Development Lead: Jiahao Pen, Yashika Arora
-- Security Team Lead: Izaz Ishaque , Amby Sarrazin, Michael Wei Zhang
+- Security Team Lead: Izaz Ishaque , Amby Sarrazin, Michael Wei Zhang, Mariam Kassar
 
 
 <h4 style="color:#336699; text-align:left;">Chameleon Website</h4>
@@ -359,7 +359,10 @@ The list below outlines the team's main achievements so far:
 - Completed repointing some of the published use case APIs.
 - Completed defining a series of use cases to be explored by the DS team.
 - Presented new use case ideas to the client at the City Of Melbourne.
-**MOP ACHIEVEMENTS TO BE LISTED HERE**
+- Inspected source code for vulnerabilities.
+- Scanned the Ports for the website (5 open ports).
+- The website has been stress-tested for high amounts of traffic in short periods of time.
+- Traversal attacks have been tested and failed against the website. 
 
 
 #### Next Steps
